--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -10,15 +10,14 @@ html {
 
 h1 {
   padding: .77rem 0;
-  background-color: #010c3f;
   text-align: center;
   font-family: 'Poppins', sans-serif;
   font-size: 1.88rem;
-  color: #fff;
+  color: #000000;
 }
 
 h1 .highlight {
-  color: #6c41ec;
+  color: #1BB954;
 }
 
 h2 {
@@ -29,7 +28,6 @@ h2 {
 .App {
   height: 100%;
   padding: 0 17% 10% 17%;
-  background-image: url('./background_photo_desktop.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
