--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -6,8 +6,9 @@
     width: 37%;
     max-height: 950px;
     padding: 2.27rem 1.16rem;
-    background-color: rgba(1, 12, 63, 0.7);
-    box-shadow: 0 4px 2px 2px #000000;
+    border-radius: 30px;
+    background-color: #F0F0F0;
+    box-shadow: 0 3px 4px 1px #00000050;
   }
   
   .Playlist input {
@@ -18,7 +19,7 @@
     border-bottom: 1px solid #6f6f6f;
     font-family: 'Poppins', sans-serif;
     font-size: 1.55rem;
-    color: #fff;
+    color: #000000;
   }
   
   .Playlist-save {
@@ -32,7 +33,7 @@
     text-align: center;
     font-size: .83rem;
     transition: background-color .25s;
-    color: #fff;
+    color: #ffffff;
     font-weight: 500;
   }
   
