--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -1,11 +1,24 @@
 .SearchResults {
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+    width: 37%;
+    max-height: 950px;
+    padding: 2.27rem 1.16rem;
+    border-radius: 30px;
+    background-color: #F0F0F0;
+    box-shadow: 0 3px 4px 1px #00000050; */
+    color: black;
+    display: flex;
+    flex-direction: column;
     width: 50%;
     height: 950px;
     border-radius: 50px;
     overflow-y: scroll;
     padding: .88rem;
-    background-color: rgba(0, 125, 21, 0.7);
-    box-shadow: 0 4px 2px 2px #000000;
+    background-color: #F0F0F0;
+    box-shadow: 0 3px 4px 1px #00000050;
   }
   
   ::-webkit-scrollbar {
