--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -1,18 +1,8 @@
 .SearchResults {
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: scroll;
-    width: 37%;
-    max-height: 950px;
-    padding: 2.27rem 1.16rem;
-    border-radius: 30px;
-    background-color: #F0F0F0;
-    box-shadow: 0 3px 4px 1px #00000050; */
     color: black;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 37%;
     height: 950px;
     border-radius: 50px;
     overflow-y: scroll;
@@ -21,6 +11,10 @@
     box-shadow: 0 3px 4px 1px #00000050;
   }
   
+  h2 {
+    font-weight: lighter;
+  }
+
   ::-webkit-scrollbar {
       width: 0px;
       background: transparent;
