--- a/src/Components/SearchBar.css
+++ b/src/Components/SearchBar.css
@@ -36,7 +36,7 @@
   
   .SearchButton:hover {
     transition: .5s;
-    color: #0c0c0c;
+    color: #161616;
     background-color: #1ae68c;
   }
 
