finally figured out how to render state, it was a typo. add minor style changes.

--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -7,7 +7,7 @@
     border-radius: 50px;
     overflow-y: scroll;
     padding: .88rem;
-    background-color: #F0F0F0;
+    background-color: #f0f0f0;
     box-shadow: 0 3px 4px 1px #00000050;
   }
   
