--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -1,7 +1,7 @@
 .Track {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid rgba(256, 256, 256, 0.8);
+    border-bottom: 1px solid #000000;
   }
   
   .Track-action {
@@ -33,5 +33,5 @@
   .Track-information p {
     font-size: .83rem;
     font-weight: 300;
-    color: rgba(256, 256, 256, 0.8);
+    color: #444444;
   }
