added state to playlist tracks, hard coded values to render

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -33,7 +33,7 @@ h2 {
   background-repeat: no-repeat;
   font-family: 'Work Sans', sans-serif;
   font-weight: 500;
-  color: #fff;
+  color: #000000;
 }
 
 .App-playlist {
